--- a/School.Data/School.Data.csproj
+++ b/School.Data/School.Data.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\School.DTOs\School.DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
