Added integration tests. Fixed a bug.

--- a/School.Console/App.config
+++ b/School.Console/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="StudentDB" connectionString="Data Source=JCoddaire\JCoddaire;Initial Catalog=School;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="SchoolDB" connectionString="Data Source=JCoddaire\JCoddaire;Initial Catalog=School;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
