--- a/School.Tests/School.Tests.csproj
+++ b/School.Tests/School.Tests.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Integration\" />
+    <Folder Include="Integration\Controllers\" />
+    <Folder Include="Integration\Data\" />
     <Folder Include="Unit\Data\" />
     <Folder Include="Unit\Controllers\" />
     <Folder Include="Unit\Helpers\" />
