app.UseCors(builder => builder

--- a/School.API/appsettings.Development.json
+++ b/School.API/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "SchoolDB": "Data Source=GAMINGPC\\MSSQLSERVER01;Initial Catalog=School;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
-  }
+    "ConnectionStrings": {
+        "SchoolDB": "Data Source=localhost;Initial Catalog=School;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
+    }
 }
