Updated InstructorGet methods to return courses within each instructor object.

--- a/School.API/School.API.csproj
+++ b/School.API/School.API.csproj
@@ -44,4 +44,8 @@
     <TypeScriptSourceRoot />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\source\School\School.API\School.API.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
